# Aegis-DB

./: .gitignore  Aegis_Architecture.md  Aegis_PRD.md  COMMERCIAL.md  Cargo.toml  LICENSE  LICENSE.md  PRIVACY.md  PROGRESS.md  README.md  TERMS.md  aegis  ecosystem.config.js  install.sh  progress.txt
.github/workflows/: docs.yml
certs/: server.crt  server.key
crates/aegis-cli/: Cargo.toml  README.md
crates/aegis-cli/src/: main.rs
crates/aegis-client/: Cargo.toml  README.md
crates/aegis-client/src/: config.rs  connection.rs  error.rs  lib.rs  pool.rs  query.rs  result.rs  transaction.rs
crates/aegis-common/: Cargo.toml  README.md
crates/aegis-common/src/: config.rs  error.rs  lib.rs  types.rs  utils.rs
crates/aegis-dashboard/: Cargo.toml  README.md  Trunk.toml  index.html
crates/aegis-dashboard/assets/: styles.css
crates/aegis-dashboard/src/: api.rs  lib.rs  state.rs  types.rs
crates/aegis-dashboard/src/pages/: dashboard.rs  dashboard_new.rs  landing.rs  login.rs  mod.rs
crates/aegis-dashboard/src/pages/dashboard/: mod.rs  overview.rs  sidebar.rs  state.rs
crates/aegis-dashboard/src/pages/dashboard/database/: collections.rs  data_visualizer.rs  graph.rs  kv_browser.rs  mod.rs  query_builder.rs
crates/aegis-dashboard/src/pages/dashboard/metrics/: mod.rs
crates/aegis-dashboard/src/pages/dashboard/nodes/: mod.rs  node_detail.rs
crates/aegis-dashboard/src/pages/dashboard/settings/: general.rs  mod.rs  security.rs  users.rs
crates/aegis-dashboard/src/pages/dashboard/shared/: formatting.rs  mod.rs  types.rs
crates/aegis-document/: Cargo.toml  README.md
crates/aegis-document/src/: collection.rs  engine.rs  index.rs  lib.rs  query.rs  types.rs  validation.rs
crates/aegis-memory/: Cargo.toml  README.md
crates/aegis-memory/src/: arena.rs  lib.rs
crates/aegis-monitoring/: Cargo.toml  README.md
crates/aegis-monitoring/src/: health.rs  lib.rs  metrics.rs  tracing.rs
crates/aegis-query/: Cargo.toml  README.md
crates/aegis-query/src/: analyzer.rs  ast.rs  executor.rs  index.rs  lib.rs  parser.rs  planner.rs
crates/aegis-replication/: Cargo.toml  README.md
crates/aegis-replication/src/: cluster.rs  crdt.rs  engine.rs  hash.rs  lib.rs  log.rs  node.rs  partition.rs  raft.rs  router.rs  shard.rs  state.rs  transaction.rs  transport.rs  vector_clock.rs
crates/aegis-server/: Cargo.toml  README.md
crates/aegis-server/src/: activity.rs  admin.rs  auth.rs  backup.rs  breach.rs  config.rs  consent.rs  gdpr.rs  handlers.rs  lib.rs  main.rs  middleware.rs  router.rs  secrets.rs  state.rs
crates/aegis-server/tests/: integration_test.rs
crates/aegis-storage/: Cargo.toml  README.md
crates/aegis-storage/benches/: storage_bench.rs
crates/aegis-storage/src/: backend.rs  block.rs  buffer.rs  lib.rs  page.rs  transaction.rs  wal.rs
crates/aegis-streaming/: Cargo.toml  README.md
crates/aegis-streaming/src/: cdc.rs  channel.rs  engine.rs  event.rs  lib.rs  stream.rs  subscriber.rs
crates/aegis-timeseries/: Cargo.toml  README.md
crates/aegis-timeseries/src/: aggregation.rs  compression.rs  engine.rs  index.rs  lib.rs  partition.rs  query.rs  retention.rs  types.rs
deploy/: aegis-axonml.service  aegis-dashboard.service  aegis-nexusscribe.service
deploy/helm/aegis-db/: Chart.yaml  values.yaml
deploy/helm/aegis-db/templates/: _helpers.tpl  configmap.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
docs/: AegisQL.md  COMPLIANCE.md  CONSULTING_AGREEMENT.md  DEVELOPER_GUIDE.md  SECURITY.md  SUPPORT_TERMS.md  USER_GUIDE.md  _config.yml  aegis-client.md  aegis-common.md  aegis-document.md  aegis-memory.md  aegis-query.md  aegis-replication.md  aegis-server.md  aegis-storage.md  aegis-streaming.md  aegis-timeseries.md  getting-started.md  index.md
docs/crates/: aegis-client.md  aegis-common.md  aegis-document.md  aegis-memory.md  aegis-query.md  aegis-replication.md  aegis-server.md  aegis-storage.md  aegis-streaming.md  aegis-timeseries.md  index.md
integrations/grafana-datasource/: plugin.json
integrations/grafana-datasource/src/: datasource.ts
release-artifacts/: aegis-db-0.2.0-linux-x86_64.tar.gz.sha256
release-artifacts/aegis-db-0.2.0-linux-x86_64/: COMMERCIAL.md  INSTALL.md  LICENSE  README.md  start.sh
release-artifacts/aegis-db-0.2.0-linux-x86_64/config/: aegis.toml
release-artifacts/aegis-db-0.2.0-linux-x86_64/dashboard/: aegis-dashboard-6224f25106008929.js  aegis-dashboard-6224f25106008929_bg.wasm  index.html  manifest.json  styles-f362bd1664dcd9f4.css
release-artifacts/aegis-db-0.2.0-linux-x86_64/docs/: COMPLIANCE.md  SECURITY.md
scripts/: dev.sh
sdks/javascript/: package.json
sdks/javascript/src/: index.ts
sdks/python/: setup.py
sdks/python/aegis_db/: __init__.py  client.py  query.py  transaction.py  types.py
