[package]
name = "aegisdb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for Aegis database"
readme = "README.md"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-common = { workspace = true }
aegis-client = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
