[package]
name = "aegis-dashboard"
version = "0.1.0"
edition = "2021"
description = "Leptos-based web dashboard for Aegis DB"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos core
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web APIs
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Storage",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
js-sys = "0.3"
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }

# Async
wasm-bindgen-futures = "0.4"

# Time
chrono = { version = "0.4", features = ["wasmbind"] }

# Console logging for WASM
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
