[package]
name = "aegis-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Memory management for Aegis database"
readme = "README.md"

[dependencies]
aegis-common = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
