[package]
name = "aegis-monitoring"
version = "0.1.0"
edition = "2021"
description = "Monitoring and observability for Aegis Database"
authors = ["AutomataNexus Development Team"]

[dependencies]
aegis-common = { path = "../aegis-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
