[package]
name = "aegis-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Distributed replication for Aegis database"
readme = "README.md"

[dependencies]
aegis-common = { workspace = true }
aegis-storage = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
