[package]
name = "aegis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "API server for Aegis database"
readme = "README.md"

[[bin]]
name = "aegis-server"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
aegis-common = { workspace = true }
aegis-storage = { workspace = true }
aegis-query = { workspace = true }
aegis-document = { workspace = true }
aegis-timeseries = { workspace = true }
aegis-streaming = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
