[package]
name = "aegis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "API server for Aegis database"
readme = "README.md"

[[bin]]
name = "aegis-server"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
aegis-common = { workspace = true }
aegis-storage = { workspace = true }
aegis-query = { workspace = true }
aegis-document = { workspace = true }
aegis-timeseries = { workspace = true }
aegis-streaming = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
# LDAP authentication
ldap3 = "0.11"
# OAuth2 HTTP requests
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# TOTP verification
totp-rs = { version = "5.5", features = ["gen_secret"] }
data-encoding = "2.5"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
# System metrics
sysinfo = "0.30"
# Secure password hashing
argon2 = "0.5"
# Cryptographically secure random
rand = "0.8"
# TLS support
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
