[package]
name = "aegis-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Storage engine for Aegis database"
readme = "README.md"

[dependencies]
aegis-common = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
memmap2 = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
snap = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "storage_bench"
harness = false
